tests/rosetta/out/Dart/checkpoint-synchronization-4.error
run error: exit status 254
../../tests/rosetta/out/Dart/checkpoint-synchronization-4.dart:15:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      d = (d as num) + 1;
                     ^
../../tests/rosetta/out/Dart/checkpoint-synchronization-4.dart:43:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/checkpoint-synchronization-4.dart:72:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/checkpoint-synchronization-4.dart:77:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/checkpoint-synchronization-4.dart:81:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
